syntax = "proto3";

import "google/protobuf/timestamp.proto";

package golem.common;

message FileSystemNode {
  string name = 1;
  NodeType type = 2;
  uint64 size = 3;  // Size in bytes, applicable for files
  string permissions = 4;  // String representation of file permissions
  google.protobuf.Timestamp last_modified = 5;
}

enum NodeType {
  FILE = 0;
  DIRECTORY = 1;
}